# 100-hours-of-embedded

./: .gitignore  JOURNAL.MD  README.MD
D1/Qsort/: main.c
D1/blink/: CMakeLists.txt  Makefile  main.c
D1/ch5_practice/: main  main.c
D1/ch6_practice/: main  main.c
D1/getint/: Makefile  getfloat.c  getfloat.h  getint.c  getint.h  main  main.c  readchar.c  readchar.h
D2/: crt0_simplified.S
D2/minimal_startup/: CMakeLists.txt  main.c  minimal.ld  startup.c
D2/minimal_startup/dumps/: blink_dump.txt  main_dump.txt  minimal_startup_dump.txt  startup_dump.txt
